--- a/dclass_application/static/css/_log.css
+++ b/dclass_application/static/css/_log.css
@@ -23,3 +23,16 @@
     width: 200px;
     height: 40px;
 }
+
+
+.login {
+    border: 1px solid var(--my-pink);
+    color: var(--my-pink);
+    background-color: white;
+}
+
+.signup {
+    border: 1px solid var(--my-blue);
+    color: var(--my-blue);
+    background-color: white;
+}
