--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -16,13 +16,11 @@
                 <li>{{ form.login }}</li>
                 <h4>パスワード</h4>
                 <li>{{ form.password }}</li>
-                {% comment %} <li><button type = 'submit' class='btn'>ログイン</button></li> {% endcomment %}
                 <li class="center"><input type = 'submit' class='btn login', value="ログイン"></input></li>
-                
             </ul>
         </form>
         <div class="center">
-            <a href={% url 'account_signup' %}><input type="submit" value="新規登録", class="btn"></a>
+            <a href={% url 'account_signup' %}><input type="submit" value="新規登録", class="btn signup"></a>
         </div>
     </div>
 </div>
