--- a/dclass_application/static/css/profile.css
+++ b/dclass_application/static/css/profile.css
@@ -31,3 +31,68 @@
 .posted_comment_w {
     margin: 30px 0;
 }
+
+.duet_table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    margin: 20px 0px;
+}
+
+.duet_table th, td {
+    border: solid 1px var(--my-gray);
+    height: 100px;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.duet_table th {
+    height: 40px;
+    border-bottom: 5px solid var(--my-gray);
+}
+
+.duet_table th:not(:first-child){
+    width:calc(95%/6)
+}
+
+.duet_table tr td:first-child {
+    width: 5%;
+}
+
+.duet_form {    
+    margin: 0 auto;
+    width: 50%;
+}
+
+
+.duet_form h1 {
+    text-align: center;
+}
+
+.duet_form li {
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+
+.duet_form ul input{
+    width: 100%;
+    height: 30px;
+    padding: 5px 10px;
+    box-sizing: border-box;
+}
+
+.duet_btn{
+    width: 200px;
+    height: 80px;
+    border: 1px solid var(--my-blue);
+    color: var(--my-blue);
+    background-color: white;
+}
+
+.place_holder_center::placeholder {
+    text-align: center;
+}
+
+.emphasize {
+    font-size: 16px;
+    color: var(--my-pink);
+}
