--- a/dclass_application/static/css/result.css
+++ b/dclass_application/static/css/result.css
@@ -64,3 +64,51 @@
     color: #EF170D;
 }
  */
+
+
+.pagination_w {
+    margin: 20px 0;
+}
+
+.pagination_w p {
+    text-align: center;
+    font-size: 20px;
+}
+
+.pagination_top {
+    display: flex;
+    margin: 0 auto;
+}
+
+.pagination_bot {
+    display: flex;
+    margin: 0 auto;
+}
+
+.pagination_item {
+    width: 80%;
+    height: 60px;
+    line-height: 60px;
+    border: 1px solid var(--my-blue);
+    /* color: var(--my-blue); */
+    box-sizing: border-box;
+    margin: 0 auto;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.pagination_item a {
+    display: block;
+    color: var(--my-blue);
+    width: 100%;
+    height: 100%;
+}
+
+
+.pagination li {
+    width: 50%;
+    text-align: center;
+    /* border: 1px solid var(--my-gray); */
+    box-sizing: border-box;
+    
+}
