--- a/dclass_application/templates/add_comment.html
+++ b/dclass_application/templates/add_comment.html
@@ -23,7 +23,7 @@
                     {{form.text}}
                 </div>
                 <div class="center">
-                    <input type="submit" value="投稿", class="btn search_btn">
+                    <input type="submit" value="投稿", class="btn add_comment_btn">
                 </div>
             </form>
         </div>
