--- a/dclass_application/static/css/index.css
+++ b/dclass_application/static/css/index.css
@@ -80,3 +80,22 @@
     text-align: center;
     height: 45px;
 }
+
+.feature {
+    display: flex;
+    margin: 30px 0 0;
+}
+
+.feature li{
+    width: calc(calc(100%-30px)/3);
+    /* width: 30%; */
+    border: 1px solid var(--my-gray);
+    box-sizing: border-box;
+    border-radius: 5px;
+    margin: 0 5px;
+    padding: 5px 10px;
+}
+
+.feature li h3 {
+    text-align: center;
+}
