--- a/dclass_application/templates/_class_list.html
+++ b/dclass_application/templates/_class_list.html
@@ -3,12 +3,12 @@
         <div class="class_result_content">
             <ul>
                 <li class="class_result_title">
-                    <h2>{{ cl.class_name }}</h2>
+                    <h2>{{ cl.class_name | truncatechars:10 }}</h2>
                     {% comment %} <p class='teacher_name'>{{ cl.teacher }}</p> {% endcomment %}
                 </li>
                 <li>
-                    <p class="class_a_average_evaluation">A率 <span class="score">{{cl.get_round_a_ratio}}%</span></p>
-                    <p class="class_a_average_evaluation">評定平均 <span class="score">{{cl.average_evaluation}}</span></p> 
+                    <p class="class_a_average_evaluation">A率 <span class="score">{{cl.get_modified_a_ratio}}</span></p>
+                    <p class="class_a_average_evaluation">評定平均 <span class="score">{{cl.get_modified_average_evaluation}}</span></p> 
                 </li>
                 <li>
                     {% if cl.place == "今出川" %}
