--- a/dclass_application/templates/base.html
+++ b/dclass_application/templates/base.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
-    <title>dclass</title>
+    <title>同志社大学授業検索サーチ</title>
 </head>
 <body>
 
