--- a/dclass_application/static/css/index.css
+++ b/dclass_application/static/css/index.css
@@ -1,6 +1,3 @@
-.search_with_terms {
-    /* margin-bottom: 10px; */
-}
 .search_with_keyword {
     margin-bottom: 10px;
     text-align: center;
@@ -17,6 +14,10 @@
     border: 1px solid var(--my-gray);
     color: white;
     background-color: #1D9BF0;
+}
+
+.search_with_terms input[type='radio']+label {
+    cursor: pointer;
 }
 
 .reset_condition a{
@@ -44,7 +45,6 @@
     padding: 10px 20px;
 }
 
-
 .radio_wrap {
     width: 100%;
     display: flex;
@@ -65,7 +65,6 @@
 
 .radio_wrap_name {
     width: 20%;
-    /* background-color: violet; */
     text-align: center;
     height: 50px;
     line-height: 50px;
@@ -79,6 +78,7 @@
     width: 80%;
     text-align: center;
     height: 45px;
+    cursor: pointer;
 }
 
 .feature {
@@ -88,14 +88,14 @@
 
 .feature li{
     width: calc(calc(100%-30px)/3);
-    /* width: 30%; */
     border: 1px solid var(--my-gray);
     box-sizing: border-box;
     border-radius: 5px;
     margin: 0 5px;
-    padding: 5px 10px;
+    padding: 10px 20px;
 }
 
 .feature li h3 {
     text-align: center;
+    margin: 5px 0;
 }
