--- a/dclass_application/static/css/index.css
+++ b/dclass_application/static/css/index.css
@@ -82,20 +82,29 @@
 }
 
 .feature {
+    width: 100%;
     display: flex;
+    flex-wrap: wrap;
     margin: 30px 0 0;
 }
 
 .feature li{
-    width: calc(calc(100%-30px)/3);
+    width: calc(calc(100% - 30px)/3);
     border: 1px solid var(--my-gray);
     box-sizing: border-box;
     border-radius: 5px;
-    margin: 0 5px;
+    margin: 5px;
     padding: 10px 20px;
 }
 
 .feature li h3 {
     text-align: center;
     margin: 5px 0;
+}
+
+@media screen and (max-width: 767px) {
+    .feature li{
+        /* width: calc(100%-10px); */
+        width: 100%;
+    }
 }
