--- a/dclass_application/static/css/main.css
+++ b/dclass_application/static/css/main.css
@@ -111,7 +111,6 @@ html {
 
 .comment_result {
     width: calc(calc(100% - 60px)/3);
-    /* padding: 5px 10px; */
     box-sizing: border-box;
     border: 1px solid var(--my-gray);
     border-radius: 5px;
@@ -224,4 +223,23 @@ input[type='radio'] {
     font-size: 18px;
     font-weight: normal;
     padding-left: 10px;
+}
+
+@media screen and (max-width: 767px) {
+    .wrapper {
+        margin: 40px 0px;
+        padding: 40px 10px;
+        background-color: white;
+        border-radius: 15px;
+        margin-top: 20px;
+    }
+    .comment_result {
+        width: calc(calc(100% - 40px)/2);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .comment_result {
+        width: calc(100% - 20px);
+    }
 }
