modified database by using AWS

--- a/dclass_application/templates/index.html
+++ b/dclass_application/templates/index.html
@@ -9,6 +9,7 @@
 {% block main %}
     <div class="wrapper">
         <h1 class="title heading">同志社大学授業検索サーチ<i class="fas fa-check-circle fa-fw my-green"></i></h1>
+        <p class="server">サーバーを移行しました <a href="http://dclass-search.com">ここをクリック！</a></p>
         <ul class="feature">
             <li>
                 <h3>簡単授業検索</h3>
