--- a/dclass_application/static/css/index.css
+++ b/dclass_application/static/css/index.css
@@ -102,9 +102,22 @@
     margin: 5px 0;
 }
 
+.server {
+    margin-top: 10px;
+    font-size: 20px;
+    /* font-weight: bold; */
+    border: 3px solid red;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.server a{
+    color: blue;
+    text-decoration: underline;
+}
+
 @media screen and (max-width: 767px) {
     .feature li{
-        /* width: calc(100%-10px); */
         width: 100%;
     }
 }
